Fix bug causing odd cursor behavior on Android when editing certain markup

InsertIncrementalTextCommand is designed so that Android IMEs that replace a
whole word (by calling InputConnection#setComposingText()) don't cause the word
to lose formatting it already has (e.g. if half the word is bolded). However,
it's a little overzealous/buggy: there are cases where the selection clearly
contains more than text, but it still tries to apply replacement text as an
incremental update, leaving the markup around the text.

For example, if we have this markup and do "select all" inside the <a>:

<a href="#" contenteditable="true"><img />test</a>

and then we type a character using setComposingText(), we currently leave the
<img /> behind. The selection is also left in an odd state (typing a second
character removes the <img> element, and appears before the first character).

The approach I'm taking in this CL is to have InsertIncrementalTextCommand
compare the current selection range which will be replaced with the smallest
range that contains all the text in that range. If there's anything extra on
either side, we won't try to preserve the text on that side with an incremental
text update, since we have a signal that the user has intentionally gone out of
their way to replace it.

An alternative approach would be to not try to preserve the text on *either*
side if we have extra markup included in the selection. However, this would be a
slightly bigger behavioral change, and I'm not sure if it would have any side
effects. The code would probably be slightly simpler this way though.

BUG=766680

Change-Id: Ie5a3323fe4e6e2c9beeb1e647949ee61f76bcff8